--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,15 @@
 .App-link {
   color: #61dafb;
 }
-
+main{
+  background-color: yellow;
+}
+body{
+  background-color: yellow;
+}
+footer{
+  background-color: yellow;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
